redoing about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,56 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
-const languages = ["Python", "Java", "JavaScript", "Typescript", "Go"];
-const webDev = ["React", "Angular", "Astro", "Flask", "Django", "FastAPI", "TailwindCSS", "Spring Boot"];
-const cloud = ["S3", "EC2", "Lambda", "DynamoDB", "IAM", "VPC", "SQS"];
-const devOps = ["Docker", "Kubernetes", "Terraform", "GitHub Actions", "Jenkins", "Ansible", "Enterprise Linux"];
-const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdown", "MDX", "Jira", "Confluence"];
 ---
 <Layout title={"about"}>
     <main class="flex flex-col space-y-8">
 	<section class="flex flex-col space-y-6">
-	    <p>I'm a born-and-bred New Yorker from Queens, and a very proud first-gen Filipino-American.</p>
-	    <p>My earliest memory is studying the Prima Guide for Pokemon FireRed on the GBA, cementing my love for video games and the tech that makes them possible.</p>
-	    <p>Since then, I've been chasing the high of intense problem solving in any field, be it in a highly technical work environment or a Pokemon VGC local.</p>
-	    <p>There is a simple joy in comprehension, and I try to seek it out in any new experience I can get my hands on.</p>
-	</section>
-	<section class="flex flex-col space-y-3">
-	    <h2 class="text-ef-green font-bold">Work History</h2>
-	    <p>Accenture (Pharmaceutical), Program Management Representative</p>
-	    <p>Accenture (Insurance), DevOps Engineer</p>
-	    <p>Hermes of Paris USA, Information Technology Intern</p>
-	    <p>The Metropolitan Museum of Art, Buildings and Management Intern</p>
-	</section>
-	<section class="flex flex-col space-y-3">
-	    <h2 class="text-ef-green font-bold">Projects</h2>
-	    <p>usefulsplash.dev | writing, learning, and coding in public</p>
-	    <p>Koi Pond | personal server and homelab</p>
-	</section>
-	<section class="flex flex-col space-y-3">   
-	    <h2 class="text-ef-green font-bold">Skillset</h2>
-	    <section class="grid grid-cols-3 gap-3">
-		<h3 class="text-ef-aqua font-semibold col-span-2">Languages</h3>
-		<ul>
-		    {languages.map((lang) => <li>{lang}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">Web Dev</h3>
-		<ul>
-		    {webDev.map((webdev) => <li>{webdev}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">AWS</h3>
-		<ul>
-		    {cloud.map((service) => <li>{service}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">IT & DevOps</h3>
-		<ul>
-		    {devOps.map((IT) => <li>{IT}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">Tools</h3>
-		<ul>
-		    {tools.map((tool) => <li>{tool}</li>)}
-		</ul>
-	    </section>
+	    <p>Under Construction</p>
 	</section>
     </main>
 </Layout>
